# dev-docs-pilot

./: .gitignore  README.md  deploy_backend.sh  deploy_edge_function.sh  package.json  setup_and_run.sh
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  todo.md
api/docs/: LOOM_OUTLINE.md  demo.html
api/eval/: dataset.json  judge.py  metrics.py  run_eval.py
api/scripts/: insert_chunks_local.py
api/src/docs_agent/: config.py  db.py  embeddings.py
api/src/docs_agent/agent/: runner.py  system_prompt.py  tools.py
api/src/docs_agent/api/: main.py  routes.py
api/src/docs_agent/ingest/: chunker.py  llms_txt.py  main.py  scraper.py
api/src/docs_agent/retrieval/: reranker.py  types.py  vector_search.py
api/supabase/: schema.sql
api/supabase/migrations/: 20260513000000_initial.sql
api/tests/: test_chunker.py  test_metrics.py
docs/: LOVABLE_PROMPT.md
src/: routeTree.gen.ts  styles.css
src/components/: AgentTrace.tsx  ChatApp.tsx  Composer.tsx  MessageBubble.tsx  RetrievalInspector.tsx  SettingsSheet.tsx  Sidebar.tsx  SourcesPanel.tsx
src/lib/: citations.ts  config.ts  evals.ts  sse.ts  types.ts
src/routes/: __root.tsx  evals.tsx  index.tsx
supabase/: config.toml
supabase/functions/chat/: agent.ts  deno.json  index.ts  intent.ts  prompts.ts  retrieval.ts
